# ser2net2ser

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Makefile  README.md
.github/workflows/: docker.yml  release.yml  test.yml
include/: ISerialPort.h  Logger.h  Logger.inl  RealSerialPort.h  SerialClient.h  SerialPort.h  SerialServer.h  SocketClient.h  TCPServer.h  VirtualSerialPort.h  client.h  common.hpp  logging.h  server.h
src/: Logger.cpp  RealSerialPort.cpp  SerialClient.cpp  SerialPort.cpp  SerialServer.cpp  TCPServer.cpp  VirtualSerialPort.cpp  alternative_server_main.cpp  another-client.cpp  client.cpp  logging.cpp  main.cpp  separate_main.cpp  server.cpp  virtualserialport.cpp  yet-another-client.cpp
tests/: test_server.cpp
